Fixed word-wrap for extra long anchor links text

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -815,6 +815,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-content a {
     color: #000;
+    word-break: break-word;
     box-shadow: var(--blue) 0 -1px 0 inset;
 }
 
