--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,61 @@
 <html xmlns:th="https://www.thymeleaf.org"
     th:replace="~{layout :: html(title = ${site.title},  content = ~{::content})}">
 <th:block th:fragment="content">
+    <th:block th:if="${theme.config.general.cover !='' }">
+        <header class="site-header outer" th:style="|background-image: url(${theme.config.general.cover})|">
+            <div class="inner">
+                <div class="site-header-content">
+                    <h1 class="site-title">
+                        <th:block th:if="${site.logo !=''}">
+                            <img class="site-logo" th:src="${site.logo}" th:alt="${site.title}" />
+                        </th:block>
+                        <th:block th:if="${site.logo == ''}" th:text="${site.title}">
 
+                        </th:block>
+                    </h1>
+                    <h2 class="site-description" th:text="${site.subtitle}"></h2>
+                </div>
+                <th:block th:replace="~{partials/site-nav}"></th:block>
+            </div>
+        </header>
+    </th:block>
+    <th:block th:if="${ theme.config.general.cover =='' }">
+        <header class="site-header outer" th:style="|background-image:url(@{/assets/images/blog-cover.jpg})|">
+            <div class=" inner">
+                <div class="site-header-content">
+                    <h1 class="site-title">
+                        <th:block th:if="${site.logo !=''}">
+                            <img class="site-logo" th:src="${site.logo}" th:alt="${site.title}" />
+                        </th:block>
+                        <th:block th:if="${site.logo == ''}" th:text="${site.title}">
+
+                        </th:block>
+                    </h1>
+                    <h2 class="site-description" th:text="${site.subtitle}"></h2>
+                </div>
+                <th:block th:replace="~{partials/site-nav}"></th:block>
+            </div>
+        </header>
+    </th:block>
+    <main id="site-main" class="site-main outer">
+        <div class="inner">
+            <div class="post-feed">
+                <th:block th:each="post : ${posts.items}">
+                    <th:block th:replace="~{partials/post-card :: post-card(${post})}" />
+                </th:block>
+            </div>
+        </div>
+    </main>
+    <div style="display: none;" class="total" th:attr="data-total=${posts.totalPages}"></div>
+    <th:block th:if="${posts.total gt 0}">
+        <script>
+            // maxPages is a global variable that is needed to determine
+            // if we need to load more pages for the infinitescroll, or if
+            // we reached the last page already.
+            var maxPages = parseInt(document.querySelector(".total").getAttribute("data-total"));
+        </script>
+        <script th:src="@{/assets/built/infinitescroll.js}"></script>
+    </th:block>
 </th:block>
 
 </html>
