--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,8 @@
     <meta name="twitter:site" content="@tryghost" />
     <meta property="og:image:width" content="2000" />
     <meta property="og:image:height" content="666" />
+    <script th:src="@{/assets/js/jquery.min.js}"></script>
+    <script th:src="@{/assets/js/jquery.fitvids.js}"></script>
     <link rel="stylesheet" type="text/css"
         th:href="|/themes/halo-theme-casper/assets/prism/css/prism-${theme.config.general.code_pretty}.css|" />
     <script type="text/javascript" th:src="@{/assets/prism/js/prism.js}"></script>
