--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,7 @@
             <th:block th:replace="${content}" />
         </div>
     </section>
-
+    <th:block th:replace="~{partials/footer}"></th:block>
 </body>
 
 </html>
