--- a/templates/post.html
+++ b/templates/post.html
@@ -53,7 +53,7 @@
             </article>
         </div>
     </main>
-    <th:block th:replace="~{partials/floating-header : header(${post})}">
+    <th:block th:replace="~{partials/floating-header :: header(${post})}">
 
     </th:block>
     <script>
