--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" th:fragment="html (title,content)">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
@@ -9,7 +8,11 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/built/screen.css}" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      th:href="@{/assets/built/screen.css}"
+    />
 
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -19,7 +22,10 @@
     <meta property="og:description" th:content="${site.subtitle}" />
     <meta property="og:url" th:content="${site.url}" />
 
-    <meta property="article:publisher" content="https://www.facebook.com/ghost" />
+    <meta
+      property="article:publisher"
+      content="https://www.facebook.com/ghost"
+    />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" th:content="${site.title}" />
     <meta name="twitter:description" th:content="${site.subtitle}" />
@@ -30,20 +36,23 @@
     <meta property="og:image:height" content="666" />
     <script th:src="@{/assets/js/jquery.min.js}"></script>
     <script th:src="@{/assets/js/jquery.fitvids.js}"></script>
-    <link rel="stylesheet" type="text/css"
-        th:href="|/themes/halo-theme-casper/assets/prism/css/prism-${theme.config.general.code_pretty}.css|" />
-    <script type="text/javascript" th:src="@{/assets/prism/js/prism.js}"></script>
-</head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      th:href="|/themes/halo-theme-casper/assets/prism/css/prism-${theme.config.general.code_pretty}.css|"
+    />
+    <script
+      type="text/javascript"
+      th:src="@{/assets/prism/js/prism.js}"
+    ></script>
+  </head>
 
-<body class="bg-slate-50 dark:bg-slate-900">
-
-
+  <body class="bg-slate-50 dark:bg-slate-900">
     <section class="container mx-auto mt-6 grid grid-cols-4 gap-6">
-        <div class="z-0 col-span-4 sm:col-span-3">
-            <th:block th:replace="${content}" />
-        </div>
+      <div class="z-0 col-span-4 sm:col-span-3">
+        <th:block th:replace="${content}" />
+      </div>
     </section>
     <th:block th:replace="~{partials/footer}"></th:block>
-</body>
-
+  </body>
 </html>
