--- a/templates/post.html
+++ b/templates/post.html
@@ -1,138 +1,64 @@
-<!doctype html>
-<html
-  xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{layout :: html(title = |${site.title} - ${post.spec.title}|,  content = ~{::content})}"
->
-  <th:block th:fragment="content">
-    <header class="site-header outer">
-      <div class="inner">
-        <th:block th:replace="~{partials/site-nav}"></th:block>
-      </div>
-    </header>
-    <main id="site-main" class="site-main outer">
-      <div class="inner">
-        <article class="post-full post">
-          <header class="post-full-header">
-            <section class="post-full-meta">
-              <time
-                class="post-full-meta-date"
-                th:datetime="${#dates.format(post.spec.publishTime,'yyyy-MM-dd')}"
-                th:text="${#dates.format(post.spec.publishTime,'yyyy-MM-dd')}"
-              ></time>
-              <th:block th:if=" ${not #lists.isEmpty(post.categories)}">
-                <span class="date-divider">/</span>
-                <a
-                  href="${post.categories[0].status.permalink}"
-                  th:text="${post.categories[0].spec.displayName}"
-                ></a>
-              </th:block>
-            </section>
-
-            <h1 class="post-full-title" th:text="${post.spec.title}"></h1>
-          </header>
-          <th:block th:if="${post.spec.cover!=''}">
-            <figure
-              class="post-full-image"
-              th:style="|background-image: url(${post.spec.cover})|"
-            ></figure>
+<!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org" th:class="${theme.config.custom.color_scheme}"
+  th:replace="~{default :: html(template = 'post-template', title = ${post.spec.title}, content = ~{::content})}">
+<th:block th:fragment="content">
+  <main id="site-main" class="site-main">
+    <article th:class="|article post image-${theme.config.post.post_image_style}|">
+      <header class="article-header gh-canvas">
+        <div class="article-tag post-card-tags">
+          <th:block th:if="${not #lists.isEmpty(post.categories)}">
+            <span class="post-card-primary-tag" th:each="category : ${post.categories}"><a th:text="${category.spec.displayName}" th:href="@{${category.status.permalink}}" th:title="${category.spec.displayName}"></a></span>
           </th:block>
-          <section class="post-full-content">
-            <div class="post-content">
-              <th:block th:utext="${post.content.content}"></th:block>
-
-              <th:blcok
-                th:replace="~{partials/post-copyright :: post-copyright(${post})}"
-              ></th:blcok>
+        </div>
+        <h1 class="article-title" th:text="${post.spec.title}">{{title}}</h1>
+        <p class="article-excerpt" th:text="${post.spec.excerpt.raw}">{{custom_excerpt}}</p>
+        <div class="article-byline">
+          <section class="article-byline-content">
+            <ul class="author-list">
+              <li class="author-list-item" th:each="author : ${post.contributors}">
+                <a th:if="${not #strings.isEmpty(author.avatar)}" href="/" class="author-avatar"
+                  aria-label="Read more of {{name}}">
+                  <img class="author-profile-image" th:src="${author.avatar}" th:alt="${author.displayName}" />
+                </a>
+                <a th:if="${#strings.isEmpty(author.avatar)}" href="/" class="author-avatar author-profile-image"
+                  th:aria-label="|Read more of ${author.displayName}|">
+                  <th:block th:replace="~{partials/icons/avatar}" />
+                </a>
+              </li>
+            </ul>
+            <div class="article-byline-meta">
+              <h4 class="author-name"><a th:text="${#strings.listJoin(post.contributors.![displayName],', ')}"></a></h4>
+              <div class="byline-meta-content">
+                <time class="byline-meta-date" th:datetime="${#dates.format(post.spec.publishTime, 'yyyy-MM-dd')}"
+                  th:text="${#dates.format(post.spec.publishTime, 'MMM dd, YYYY')}">{{date}}</time>
+                <span class="byline-reading-time"><span class="bull">&bull;</span> 5 mins</span>
+              </div>
             </div>
           </section>
-          <footer class="post-full-footer">
-            <th:block th:if="${#lists.size(post.contributors) gt 1}">
-              <th:block
-                th:replace="~{partials/byline-multiple :: single(${post.contributors})}"
-              >
-              </th:block>
-            </th:block>
-            <th:block th:unless="${#lists.size(post.contributors) gt 1}">
-              <th:block
-                th:replace="~{partials/byline-single :: single(${post.contributors[0]})}"
-              ></th:block>
-            </th:block>
-          </footer>
+        </div>
+        <figure class="article-image"
+          th:if="${theme.config.post.post_image_style != 'hidden' and not #strings.isEmpty(post.spec.cover)}">
+          <img sizes="(min-width: 1400px) 1400px, 92vw" th:src="${post.spec.cover}" th:alt="${post.spec.title}" />
+        </figure>
+      </header>
+      <section class="gh-content gh-canvas" th:utext="${post.content.content}"></section>
+      <section class="article-comments gh-canvas" th:if="${haloCommentEnabled}" style="font-size: 20px;">
+        <halo:comment style="font-size: 20px;"
+            group="content.halo.run"
+            kind="Post"
+            th:attr="name=${post.metadata.name}"
+            colorScheme="'light'"
+          />
+      </section>
+    </article>
+  </main>
+  <aside class="read-more-wrap outer" th:if="${theme.config.post.show_recent_posts_footer}">
+    <div class="read-more inner" th:with="posts = ${postFinder.list(1, 3)}">
+      <th:block th:each="post,iterStat : ${posts.items}">
+        <th:block th:replace="~{partials/post-card :: post-card(${post})}" />
+      </th:block>
+    </div>
+  </aside>  
+</th:block>
 
-          <section class="post-full-comments">
-            <halo:comment
-              group="content.halo.run"
-              kind="Post"
-              th:attr="name=${post.metadata.name}"
-              colorScheme="'light'"
-            />
-          </section>
-        </article>
-      </div>
-    </main>
-    <th:block th:replace="~{partials/floating-header :: header(${post})}">
-    </th:block>
-    <script>
-      // NOTE: Scroll performance is poor in Safari
-      // - this appears to be due to the events firing much more slowly in Safari.
-      //   Dropping the scroll event and using only a raf loop results in smoother
-      //   scrolling but continuous processing even when not scrolling
-      $(document).ready(function () {
-        // Start fitVids
-        var $postContent = $(".post-full-content");
-        $postContent.fitVids();
-        // End fitVids
-
-        var progressBar = document.querySelector("#reading-progress");
-        var header = document.querySelector(".floating-header");
-        var title = document.querySelector(".post-full-title");
-
-        var lastScrollY = window.scrollY;
-        var lastWindowHeight = window.innerHeight;
-        var lastDocumentHeight = $(document).height();
-        var ticking = false;
-
-        function onScroll() {
-          lastScrollY = window.scrollY;
-          requestTick();
-        }
-
-        function onResize() {
-          lastWindowHeight = window.innerHeight;
-          lastDocumentHeight = $(document).height();
-          requestTick();
-        }
-
-        function requestTick() {
-          if (!ticking) {
-            requestAnimationFrame(update);
-          }
-          ticking = true;
-        }
-
-        function update() {
-          var trigger = title.getBoundingClientRect().top + window.scrollY;
-          var triggerOffset = title.offsetHeight + 35;
-          var progressMax = lastDocumentHeight - lastWindowHeight;
-
-          // show/hide floating header
-          if (lastScrollY >= trigger + triggerOffset) {
-            header.classList.add("floating-active");
-          } else {
-            header.classList.remove("floating-active");
-          }
-
-          progressBar.setAttribute("max", progressMax);
-          progressBar.setAttribute("value", lastScrollY);
-
-          ticking = false;
-        }
-
-        window.addEventListener("scroll", onScroll, { passive: true });
-        window.addEventListener("resize", onResize, false);
-
-        update();
-      });
-    </script>
-  </th:block>
 </html>
