--- a/templates/author.html
+++ b/templates/author.html
@@ -13,23 +13,13 @@
               <header class="post-card-header">
                 <h2 class="post-card-title" th:text="${author.spec.displayName}">{{name}}</h2>
               </header>
-              <div class="post-card-excerpt" th:text="${author.spec.displayName}">{{bio}}</div>
-              <!-- <footer class="author-profile-footer">
-							{{#if location}}
-								<div class="author-profile-location">{{location}}</div>
-							{{/if}}
-							<div class="author-profile-meta">
-								{{#if website}}
-									<a class="author-profile-social-link" href="{{website}}" target="_blank" rel="noopener">{{website}}</a>
-								{{/if}}
-								{{#if twitter}}
-									<a class="author-profile-social-link" href="{{twitter_url}}" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
-								{{/if}}
-								{{#if facebook}}
-									<a class="author-profile-social-link" href="{{facebook_url}}" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
-								{{/if}}
-							</div>
-							</footer> -->
+              <div class="post-card-excerpt" th:text="${author.spec.bio}">{{bio}}</div>
+              <footer class="author-profile-footer">
+								<div class="author-profile-location" th:unless="${#strings.isEmpty(#annotations.get(author, 'location'))}" th:text="${#annotations.get(author, 'location')}">{{location}}</div>
+                <div class="author-profile-meta">
+                  <a class="author-profile-social-link" target="_blank" rel="noopener" th:unless="${#strings.isEmpty(#annotations.get(author, 'website'))}" th:text="${#annotations.get(author, 'website')}" th:href="${#annotations.get(author, 'website')}">{{website}}</a>
+                </div>
+							</footer>
             </div>
           </div>
         </section>
